# pybnb

./: .appveyor.yml  .readthedocs.yml  .rtd_requirements.txt  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  conftest.py  doc_requirements.txt  example_requirements.txt  requirements.txt  run-mpitests.py  setup.cfg  setup.py  test_requirements.txt
.github/workflows/: ci.yml  pythonpackage.yml
.travis/: test_parallel.sh  test_slim.sh
doc/: Makefile  conf.py  index.rst  spelling_wordlist.txt
doc/advanced_usage/: index.rst
doc/futures/: index.rst
doc/getting_started/: complete_example.py  index.rst
doc/reference/: common.rst  configuration.rst  convergence_checker.rst  dispatcher.rst  dispatcher_proxy.rst  futures.rst  index.rst  misc.rst  mpi_utils.rst  node.rst  priority_queue.rst  problem.rst  pyomo.rst  solver.rst  solver_results.rst
examples/: bin_packing.py  lipschitz_1d.py  range_reduction_script.py  rosenbrock_2d.py
examples/command_line_problems/: bin_packing.py  binary_knapsack.py  lipschitz_1d.py  rosenbrock_2d.py
examples/scripts/: range_reduction_pyomo.py  simple.py
src/pybnb/: __about__.py  __init__.py  common.py  configuration.py  convergence_checker.py  dispatcher.py  dispatcher_proxy.py  futures.py  misc.py  mpi_utils.py  node.py  priority_queue.py  problem.py  pyomo_tools.py  solver.py  solver_results.py
src/tests/: test_common.py  test_configuration.py  test_convergence_checker.py  test_dispatcher.py  test_examples.py  test_misc.py  test_node.py  test_package.py  test_priority_queue.py  test_problem.py  (+5 more)
(+53 files in other folders)
