[metadata]
description-file = README.rst

[bdist_wheel]
# supports python3
universal = 1

[coverage:run]
source =
    # standard pytest execution
    src
    examples

[flake8]
ignore = E501,E203,E402,E722,E731,W503
exclude = src/pybnb/__init__.py,src/pybnb/pyomo/__init__.py

[mypy]
ignore_missing_imports = true
follow_imports = silent
python_version = 2.7
