[metadata]
description-file = README.rst

[bdist_wheel]
# supports python3
universal = 1

[coverage:run]
source =
    # standard pytest execution
    src
    examples

[flake8]
ignore = E203,E402,E722,E731
exclude = src/pybnb/__init__.py,src/pybnb/pyomo/__init__.py
[pycodestyle]
max_line_length = 88
ignore = E203,E402,E722,E731
[mypy]
ignore_missing_imports = true
follow_imports = silent
python_version = 2.7
