[metadata]
description-file = README.rst

[bdist_wheel]
# supports python3
universal = 1

[coverage:run]
source =
    # standard pytest execution
    src
    examples
[tool:pytest]
markers =
    example: an example problem to test
doctest_subpackage_requires =
    src/pybnb/pyomo = pyomo
[flake8]
ignore = E203,E402,E501,E722,E731,W503
exclude = src/pybnb/__init__.py,src/pybnb/pyomo/__init__.py
[pycodestyle]
max_line_length = 88
ignore = E203,E402,E501,E722,E731,W503
[mypy]
ignore_missing_imports = true
